--- a/src/www/css/style.scss
+++ b/src/www/css/style.scss
@@ -18,13 +18,13 @@
 .wrapper-vertical{
     width: 100vw;
     height: calc(100vw/16*9);
-    font-size: 5vw;
+    font-size: 1.95vw;
 }
 
 .wrapper-horizontal{
     width: calc(100vh/9*16);
     height: 100vh;
-    font-size: 5vh;
+    font-size: 3.5vh;
 }
 
 .assets{
@@ -58,8 +58,8 @@
     box-sizing: border-box;
     border: solid medium #424242;
     border-radius: 10px;
-    font-size: 100%; //ここもjsでフィックスしたほうがいいかも？
-    line-height: 100%;
+    font-size: 120%; //ここもjsでフィックスしたほうがいいかも？
+    //line-height: 100%;
     text-align: center;
     background-color: rgba(250,250,250,0.7);
     letter-spacing: 1px;
@@ -71,7 +71,7 @@
     margin-top: 1.5%;
     width: 100%;
     padding: 2.75% 2.75%;
-    font-size: 34px;
+    font-size: 100%;
     border: solid medium #424242;
     border-radius: 10px;
     line-height: 1.35em;
